# EventApp

./: .gitattributes  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  server.js  start.bat
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/tests/: test_health.py
apps/web/: Dockerfile  README.md  jest.config.js  package-lock.json  package.json
apps/web/pages/: home.tsx  index.tsx
infra/: README.md
public/: create-event.html  event-details.html  index.html  search.html
public/categories/: arts.html  business.html  growth.html  health.html  sports.html  tech.html
public/css/: categories.css  category.css  content-views.css  leaderboard.css  medals.css  navigation.css  new-home.css  profile.css  search.css  style.css
public/js/: categories.js  content-views.js  create-event.js  event-details.js  leaderboard.js  main.js  medals.js  new-home.js
public/profiles/: david-martinez.html  emily-chen.html  mike-anderson.html  sarah-williams.html
src/data/: events.js
tests/: events.test.js  frontend.test.js  ranking.test.js
